Third Commit: Made changes to searchbar and profile pic

--- a/src/style.module.css
+++ b/src/style.module.css
@@ -20,3 +20,19 @@
     flex: 2;
     background-color: cornsilk;
 }
+
+  
+.profile_pic_div {
+    display: flex;
+    justify-content: flex-end; /* Moves the image to the right */
+  }
+  
+  .profile_pic {
+    width: 50px;   /* Set the desired size for the profile picture */
+    height: 50px;
+    object-fit: cover; /* Makes the image fill the space without distortion */
+    border-radius: 50%; /* Circular image */
+    border: 2px solid #ccc; /* Optional border */
+    margin-left: 80%;
+    margin-top: 5px;
+  }
